--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the dataset from Scikit-Learn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -31,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -184,6 +193,37 @@
    "source": [
     "df = dataset_to_df(load_boston())\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What does the features mean?\n",
+    "\n",
+    "The features are described here: https://www.cs.toronto.edu/~delve/data/boston/bostonDetail.html\n",
+    "\n",
+    "1. CRIM - per capita crime rate by town\n",
+    "2. ZN - proportion of residential land zoned for lots over 25,000 sq.ft.\n",
+    "3. INDUS - proportion of non-retail business acres per town.\n",
+    "4. CHAS - Charles River dummy variable (1 if tract bounds river; 0 otherwise)\n",
+    "5. NOX - nitric oxides concentration (parts per 10 million)\n",
+    "6. RM - average number of rooms per dwelling\n",
+    "7. AGE - proportion of owner-occupied units built prior to 1940\n",
+    "8. DIS - weighted distances to five Boston employment centres\n",
+    "9. RAD - index of accessibility to radial highways\n",
+    "10. TAX - full-value property-tax rate per \\$10,000\n",
+    "11. PTRATIO - pupil-teacher ratio by town\n",
+    "12. B - $1000(Bk - 0.63)^2$ where Bk is the proportion of blacks by town\n",
+    "13. LSTAT - % lower status of the population\n",
+    "14. MEDV - Median value of owner-occupied homes in $1000's"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline Predictions"
    ]
   },
   {
