Added pystacknet and updated readme

--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.datasets import load_boston"
+    "from sklearn.datasets import load_boston\n",
+    "\n",
+    "# Suppress warnings for now\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=UserWarning)\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
   {
@@ -20,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -185,7 +190,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +221,7 @@
     "11. PTRATIO - pupil-teacher ratio by town\n",
     "12. B - $1000(Bk - 0.63)^2$ where Bk is the proportion of blacks by town\n",
     "13. LSTAT - % lower status of the population\n",
-    "14. MEDV - Median value of owner-occupied homes in $1000's"
+    "14. (label) MEDV - Median value of owner-occupied homes in $1000's"
    ]
   },
   {
@@ -224,6 +229,101 @@
    "metadata": {},
    "source": [
     "# Baseline Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# Getting the output variable\n",
+    "y = df['label']\n",
+    "\n",
+    "# Getting the input variables\n",
+    "X = df.drop(['label'], axis=1)\n",
+    "\n",
+    "# Diving our input and output into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "                                    X, y, \n",
+    "                                    test_size=0.33, \n",
+    "                                    random_state=42\n",
+    "                                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {\n",
+    "    'max_depth':[3, 5, 10, 13], \n",
+    "    'n_estimators':[100, 200, 400, 600, 900],\n",
+    "    'max_features':[2, 4, 6, 8, 10]\n",
+    "}\n",
+    "\n",
+    "# Defining our estimator, the algorithm to optimize\n",
+    "rf = RandomForestRegressor()\n",
+    "\n",
+    "# Defining the fine-tuning of the estimator\n",
+    "gs = GridSearchCV(estimator=rf,\n",
+    "                  param_grid=parameters, \n",
+    "                  n_jobs=-1, \n",
+    "                  scoring='r2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training over a grid of parameters on our training datasets\n",
+    "gs.fit(X_train, y_train)\n",
+    "\n",
+    "# Predicting on our test datasets\n",
+    "pred = gs.predict(X_test)\n",
+    "\n",
+    "# Scoring on our test labels\n",
+    "score = r2_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The test score on the best model: 0.8609883069228597\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The test score on the best model: {0}'.format(score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Improving baseline with stacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pystacknet.pystacknet import StackNetRegressor"
    ]
   },
   {
