--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Getting the output variable\n",
     "y = df['label']\n",
@@ -257,57 +255,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "def algorithm_pipeline(X_train_data, X_test_data, y_train_data, y_test_data, \n",
+    "                       model, param_grid, cv=10, scoring_fit='neg_mean_squared_error',\n",
+    "                       scoring_test=r2_score, do_probabilities = False):\n",
+    "    gs = GridSearchCV(\n",
+    "        estimator=model,\n",
+    "        param_grid=param_grid, \n",
+    "        cv=cv, \n",
+    "        n_jobs=-1, \n",
+    "        scoring=scoring_fit,\n",
+    "        verbose=2\n",
+    "    )\n",
+    "    fitted_model = gs.fit(X_train_data, y_train_data)\n",
+    "    \n",
+    "    if do_probabilities:\n",
+    "      pred = fitted_model.predict_proba(X_test_data)\n",
+    "    else:\n",
+    "      pred = fitted_model.predict(X_test_data)\n",
+    "    \n",
+    "    score = scoring_test(y_test_data, pred)\n",
+    "    \n",
+    "    return [fitted_model, pred, score]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = {\n",
-    "    'max_depth':[3, 5, 10, 13], \n",
-    "    'n_estimators':[100, 200, 400, 600, 900],\n",
-    "    'max_features':[2, 4, 6, 8, 10]\n",
-    "}\n",
-    "\n",
     "# Defining our estimator, the algorithm to optimize\n",
-    "rf = RandomForestRegressor()\n",
+    "models_to_train = [RandomForestRegressor()]\n",
     "\n",
-    "# Defining the fine-tuning of the estimator\n",
-    "gs = GridSearchCV(estimator=rf,\n",
-    "                  param_grid=parameters, \n",
-    "                  n_jobs=-1, \n",
-    "                  scoring='r2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Training over a grid of parameters on our training datasets\n",
-    "gs.fit(X_train, y_train)\n",
+    "# Defining the hyperparameters to optimize\n",
+    "grid_parameters = [\n",
+    "    { # Random Forest\n",
+    "        'max_depth':[3, 5, 10, 13], \n",
+    "        'n_estimators':[100, 200, 400, 600, 900],\n",
+    "        'max_features':[2, 4, 6, 8, 10]\n",
+    "    }\n",
+    "]\n",
     "\n",
-    "# Predicting on our test datasets\n",
-    "pred = gs.predict(X_test)\n",
+    "models_preds_scores = []\n",
     "\n",
-    "# Scoring on our test labels\n",
-    "score = r2_score(y_test, pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The test score on the best model: 0.8609883069228597\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('The test score on the best model: {0}'.format(score))"
+    "for i, model in enumerate(models_to_train):\n",
+    "    params = grid_parameters[i]\n",
+    "    \n",
+    "    #result = algorithm_pipeline()\n",
+    "    # models_preds_scores.extend(result)"
    ]
   },
   {
