--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,11 +255,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
@@ -275,6 +274,7 @@
     "        verbose=2\n",
     "    )\n",
     "    fitted_model = gs.fit(X_train_data, y_train_data)\n",
+    "    best_model = fitted_model.best_estimator_\n",
     "    \n",
     "    if do_probabilities:\n",
     "      pred = fitted_model.predict_proba(X_test_data)\n",
@@ -283,20 +283,67 @@
     "    \n",
     "    score = scoring_test(y_test_data, pred)\n",
     "    \n",
-    "    return [fitted_model, pred, score]"
+    "    return [best_model, pred, score]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 19440 candidates, totalling 97200 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:   11.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 1316 tasks      | elapsed:   38.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 3908 tasks      | elapsed:  1.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 5688 tasks      | elapsed:  2.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 7796 tasks      | elapsed:  3.7min\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from lightgbm import LGBMRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "\n",
     "# Defining our estimator, the algorithm to optimize\n",
-    "models_to_train = [RandomForestRegressor()]\n",
+    "models_to_train = [LGBMRegressor(), RandomForestRegressor(), XGBRegressor()]\n",
     "\n",
     "# Defining the hyperparameters to optimize\n",
     "grid_parameters = [\n",
+    "    { # XGBoost\n",
+    "        'n_estimators': [400, 700, 1000],\n",
+    "        'colsample_bytree': [0.7, 0.8],\n",
+    "        'max_depth': [15,20,25],\n",
+    "        'reg_alpha': [1.1, 1.2, 1.3],\n",
+    "        'reg_lambda': [1.1, 1.2, 1.3],\n",
+    "        'subsample': [0.7, 0.8, 0.9]\n",
+    "    }\n",
+    "    { # LightGBM\n",
+    "        'n_estimators': [400, 700, 1000],\n",
+    "        'learning_rate': [0.08, 0.1, 0.12],\n",
+    "        'colsample_bytree': [0.7, 0.8],\n",
+    "        'max_depth': [4, 5, 7, 10, 13],\n",
+    "        'num_leaves': [10, 20],\n",
+    "        'reg_alpha': [1.1, 1.2, 1.3],\n",
+    "        'reg_lambda': [1.1, 1.2, 1.3],\n",
+    "        'min_split_gain': [0.3, 0.4],\n",
+    "        'subsample': [0.7, 0.8, 0.9],\n",
+    "        'subsample_freq': [10, 20]\n",
+    "        \n",
+    "    }, \n",
     "    { # Random Forest\n",
     "        'max_depth':[3, 5, 10, 13], \n",
     "        'n_estimators':[100, 200, 400, 600, 900],\n",
@@ -309,8 +356,35 @@
     "for i, model in enumerate(models_to_train):\n",
     "    params = grid_parameters[i]\n",
     "    \n",
-    "    #result = algorithm_pipeline()\n",
-    "    # models_preds_scores.extend(result)"
+    "    result = algorithm_pipeline(X_train, X_test, y_train, y_test, \n",
+    "                                 model, params, cv=5)\n",
+    "    models_preds_scores.append(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
+       "                      max_depth=13, max_features=6, max_leaf_nodes=None,\n",
+       "                      max_samples=None, min_impurity_decrease=0.0,\n",
+       "                      min_impurity_split=None, min_samples_leaf=1,\n",
+       "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "                      n_estimators=200, n_jobs=None, oob_score=False,\n",
+       "                      random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models_preds_scores[0]"
    ]
   },
   {
