--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
        "4     18.7  396.90   5.33   36.2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,38 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 19440 candidates, totalling 97200 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=-1)]: Done 504 tasks      | elapsed:   11.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 1316 tasks      | elapsed:   38.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 2448 tasks      | elapsed:  1.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 3908 tasks      | elapsed:  1.7min\n",
-      "[Parallel(n_jobs=-1)]: Done 5688 tasks      | elapsed:  2.5min\n",
-      "[Parallel(n_jobs=-1)]: Done 7796 tasks      | elapsed:  3.7min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from lightgbm import LGBMRegressor\n",
     "from xgboost import XGBRegressor\n",
     "\n",
     "# Defining our estimator, the algorithm to optimize\n",
-    "models_to_train = [LGBMRegressor(), RandomForestRegressor(), XGBRegressor()]\n",
+    "models_to_train = [XGBRegressor(), LGBMRegressor(), RandomForestRegressor()]\n",
     "\n",
     "# Defining the hyperparameters to optimize\n",
     "grid_parameters = [\n",
@@ -330,7 +308,7 @@
     "        'reg_alpha': [1.1, 1.2, 1.3],\n",
     "        'reg_lambda': [1.1, 1.2, 1.3],\n",
     "        'subsample': [0.7, 0.8, 0.9]\n",
-    "    }\n",
+    "    },\n",
     "    { # LightGBM\n",
     "        'n_estimators': [400, 700, 1000],\n",
     "        'learning_rate': [0.08, 0.1, 0.12],\n",
@@ -349,8 +327,34 @@
     "        'n_estimators':[100, 200, 400, 600, 900],\n",
     "        'max_features':[2, 4, 6, 8, 10]\n",
     "    }\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 486 candidates, totalling 2430 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    5.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   20.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 357 tasks      | elapsed:  1.0min\n",
+      "[Parallel(n_jobs=-1)]: Done 640 tasks      | elapsed:  1.7min\n"
+     ]
+    }
+   ],
+   "source": [
     "models_preds_scores = []\n",
     "\n",
     "for i, model in enumerate(models_to_train):\n",
