--- a/Model Stacking.ipynb
+++ b/Model Stacking.ipynb
@@ -350,7 +350,8 @@
       "[Parallel(n_jobs=-1)]: Done  33 tasks      | elapsed:    5.7s\n",
       "[Parallel(n_jobs=-1)]: Done 154 tasks      | elapsed:   20.3s\n",
       "[Parallel(n_jobs=-1)]: Done 357 tasks      | elapsed:  1.0min\n",
-      "[Parallel(n_jobs=-1)]: Done 640 tasks      | elapsed:  1.7min\n"
+      "[Parallel(n_jobs=-1)]: Done 640 tasks      | elapsed:  1.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 1005 tasks      | elapsed:  2.8min\n"
      ]
     }
    ],
